# adapters

./: .env.example  .gitignore  README.md  __init__.py  compose.yaml  docker-compose.yaml  pyproject.toml  pyrightconfig.json
.github/ISSUE_TEMPLATE/: new-data-consumption-offer.md  new-data-stream-request.md
examples/gsheets/: utils.py
examples/gsheets/direct/: direct_flow.py
examples/gsheets/dynamic/: dynamic_flow.py
examples/simple_gsheets/: complete_flow.py  utils.py
src/coingecko/: .env.example  .gitignore  README.md  Taskfile.yml  coins.csv  go.mod  go.sum
src/coingecko/cmd/coin_list/: main.go
src/examples/gsheets/: utils.py
src/examples/gsheets/direct/: direct_flow.py
src/examples/gsheets/dynamic/: dynamic_flow.py  primitive_sources.csv
src/examples/quicksilver/: __init__.py  env_utils.py  mock_tn_block.py  poc_example.py
src/tn_adapters/tasks/: github.py
src/tsn_adapters/blocks/: __init__.py  deployment_state.py  fmp.py  github_access.py  primitive_source_descriptor.py  quicksilver.py  shared_types.py  sql_deployment_state.py  sql_source_descriptor.py  stream_filtering.py  tn_access.py
src/tsn_adapters/blocks/models/: __init__.py  sql_models.py
src/tsn_adapters/common/interfaces/: __init__.py  provider.py  reconciliation.py  target.py  transformer.py
src/tsn_adapters/common/trufnetwork/: __init__.py  tn.py
src/tsn_adapters/common/trufnetwork/models/: __init__.py  tn_models.py
src/tsn_adapters/common/trufnetwork/tasks/: insert.py
src/tsn_adapters/flows/: real_time_flow.py  stream_deploy_flow.py
src/tsn_adapters/flows/fmp/: historical_flow.py  real_time_flow.py
src/tsn_adapters/tasks/: data_manipulation.py  github.py  gsheet.py  tsn.py
src/tsn_adapters/tasks/argentina/: README.md  __init__.py  argentina_ingestor_flow.py  base_types.py  config.py  provider.py  reconciliation.py  scrape_zip.py  sepa_resource_processor.py  sepa_scraper.py  stream_details.py  target.py  task_wrappers.py  transformers.py  types.py
src/tsn_adapters/tasks/argentina/aggregate/: __init__.py  category_price_aggregator.py  uncategorized.py
src/tsn_adapters/tasks/argentina/errors/: __init__.py  accumulator.py  context.py  context_helper.py  errors.py
src/tsn_adapters/tasks/argentina/flow/: argentina_ingestor_flow.py
src/tsn_adapters/tasks/argentina/flows/: __init__.py  aggregate_products_flow.py  argentina_ingestor_flow.py  argentina_ingestor_flow_v3.py  base.py  ingest_flow.py  insert_products_flow.py  preprocess_flow.py
src/tsn_adapters/tasks/argentina/interfaces/: __init__.py  base.py
src/tsn_adapters/tasks/argentina/models/: __init__.py  aggregate_products_models.py  aggregated_prices.py  category_map.py  sepa_models.py  stream_metadata.py  stream_source.py
src/tsn_adapters/tasks/argentina/models/sepa/: __init__.py  s3_item.py  sepa_models.py  website_item.py
src/tsn_adapters/tasks/argentina/provider/: README.md  __init__.py  base.py  data_processor.py  factory.py  product_averages.py  s3.py  website.py
src/tsn_adapters/tasks/argentina/provider/interfaces/: __init__.py  base.py
src/tsn_adapters/tasks/argentina/reconciliation/: __init__.py  interfaces.py  strategies.py
src/tsn_adapters/tasks/argentina/scrapers/: resource_processor.py  sepa_scraper.py
src/tsn_adapters/tasks/argentina/tasks/: __init__.py  aggregate_products_tasks.py  date_processing_tasks.py  descriptor_tasks.py
src/tsn_adapters/tasks/argentina/transformers/: __init__.py  sepa.py
src/tsn_adapters/tasks/argentina/utils/: __init__.py  archives.py  dates.py  weighted_average.py
src/tsn_adapters/tasks/argentina/utils/processors/: __init__.py  resource_processor.py
src/tsn_adapters/tasks/quicksilver/: README.md  __init__.py  flow.py  provider.py  transformer.py  types.py
src/tsn_adapters/tasks/trufnetwork/: __init__.py  tn.py
src/tsn_adapters/tasks/trufnetwork/models/: __init__.py  tn_models.py
src/tsn_adapters/utils/: __init__.py  as_json_object.py  cast_future.py  create_empty_df.py  date_type.py  deroutine.py  filter_failures.py  logging.py  time_utils.py  tn_record.py  unix.py
tests/: conftest.py  test_github.py  test_scrape_zip.py
tests/argentina/: conftest.py  helpers.py  test_conftest_fixtures.py  test_scrape_zip.py  test_sepa_models.py  test_streaming_df.py
tests/argentina/aggregate/: test_category_price_aggregator.py  verify_data_item_test.py
tests/argentina/errors/: test_error_accumulation.py  test_error_integration.py  test_global_context_scope.py
tests/argentina/flows/: test_aggregate_products_flow.py  test_full_pipeline_integration.py  test_ingest_flow.py  test_insert_products_flow.py  test_preprocess_flow.py
tests/argentina/models/: test_aggregate_products_models.py
tests/argentina/provider/: test_product_averages_provider.py
tests/argentina/tasks/: test_aggregate_products_tasks.py  test_date_processing_tasks.py  test_descriptor_tasks.py
tests/blocks/: test_deployment_state.py  test_prefect_task_error_catch.py  test_s3_source_descriptor.py  test_split_and_insert_records.py  test_sql_deployment_state.py  test_sql_source_descriptor.py  test_stream_deployment_initialization.py  test_stream_filtering.py  test_tn_access_filtering.py  test_tn_access_integration.py  test_tn_network_error.py
tests/fixtures/: test_sql.py  test_trufnetwork.py
tests/flows/: test_retry_behavior.py  test_stream_deploy_flow.py
tests/fmp/: test_fmpblock.py  test_fmpblock_contract.py  test_fmpblock_integration.py  test_historical_flow.py  test_real_time_flow.py
tests/integration/: test_stream_deploy_flow_integration.py  test_stream_filtering_integration.py
tests/utils/: fake_tn_access.py  test_deroutine.py  test_logging.py
